# ADS

./: .gitignore
assignment_1/assignment_1/: CMakeLists.txt  README
assignment_1/assignment_1/src/: Renderer.cpp  cluster_extraction.cpp
assignment_2/assignment_2/: README.md
assignment_2/assignment_2/demo/: main.cpp
assignment_2/assignment_2/include/tracker/: KalmanFilter.h  Tracklet.h
assignment_2/assignment_2/src/: CloudManager.cpp
assignment_2/assignment_2/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
kalman_filter/: kf1D.ipynb  kf2D.ipynb
pcl/0_pcl_reader/: CMakeLists.txt  pcl_reader.cpp
pcl/1_voxel_filtering/: CMakeLists.txt  README.save  voxel_filtering.cpp
pcl/2_segmentation_plane/: CMakeLists.txt  segmentation.cpp
pcl/3_euclidean_clustering/: cluster_extraction.cpp
